Regression: Compositor: Swap active socket function don't work for File Output node #107431

Closed
opened 2023-04-28 12:30:52 +02:00 by sodoma_atelier · 1 comment

Blender Version
Broken: Current main.
Worked: 3.3.

Short description of error
When you want to move the sockets (up and down) in the Compositing File Output node it doesn't move.

image

Exact steps for others to reproduce the error

  1. Go in compositor node tree editor.
  2. Create File Output node.
  3. Press N button. In N-panel:
    a. Go in Node settings.
    b. Open Properties section.
    c. Press Add Input button some times.
    d. Trying to move last socket in some direction.
    Socket dosn't moved.
**Blender Version** Broken: Current main. Worked: 3.3. **Short description of error** When you want to move the sockets (up and down) in the Compositing File Output node it doesn't move. ![image](/attachments/4e20a886-8bdd-4be2-9844-3f9399ca7c77) **Exact steps for others to reproduce the error** 1. Go in compositor node tree editor. 2. Create `File Output` node. 3. Press `N` button. In N-panel: a. Go in Node settings. b. Open Properties section. c. Press `Add Input` button some times. d. Trying to move last socket in some direction. Socket dosn't moved.
sodoma_atelier added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-28 12:30:53 +02:00
Iliya Katushenock changed title from The socket position in node File Output in Compositing doesn't work to Regression: Compositor: Swap active socket function don't work for File Output node 2023-04-28 12:59:13 +02:00

I would completely redesign node to use declarations. But as an easier step, i can just start poking the topology cache, as it won't update right now by move operator.

I would completely redesign node to use declarations. But as an easier step, i can just start poking the topology cache, as it won't update right now by move operator.
Iliya Katushenock added
Type
Bug
and removed
Type
Report
labels 2023-04-28 13:09:12 +02:00
Iliya Katushenock removed the
Interest
EEVEE & Viewport
label 2023-04-28 13:14:45 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-01 13:22:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107431
No description provided.