Fix #107431: tag node tree topology as changed when changing socket order

Pull Request: https://projects.blender.org/blender/blender/pulls/107437